fix padding on small screens

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -263,10 +263,6 @@ html[data-bs-theme="dark"] #editProfile {
   }
 
   #central-content {
-    min-width: none !important;
-    max-width: none !important;
-    padding-right: 3rem !important;
-    padding-left: 3rem !important;
     padding-bottom: 75px !important;
   }
 
@@ -286,7 +282,6 @@ html[data-bs-theme="dark"] #editProfile {
     border-top: 1px solid var(--bs-border-color, #dee2e6) !important;
     background-color: var(--bs-body-tertiary-bg, #f8f9fa);
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1) !important;
-    max-width: 92% !important;
   }
 
   #navigation>a[href='/'],
